<resources>
    <string name="app_name">PracticeKotlin</string>

    <!-- buttons -->
    <string name="first_title">Saludar App</string>
    <string name="button_title_saludapp">Saludar App</string>
    <string name="button_title_imcapp">IMC App</string>
    <string name="button_title_todoapp">TODO App</string>
    <string name="button_title_superheroapp">Superhero App</string>
    <string name="button_title_settingsapp">Settings App</string>


    <!-- first app  -->
    <string name="name">Escribe tu nombre</string>
    <string name="lastname">Escribe tu apellido</string>
    <string name="profession">Dinos tu profesión</string>
    <string name="research">Comentame sobre el tema que investigas</string>
    <string name="button_saludar">Saludar</string>


    <!--IMC APP-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="other">Otros factores</string>
    <string name="actividad">Actividad Física</string>
    <string name="habitos_alimenticios">Hábitos Alimenticios</string>
    <string name="habitos_sueno">Hábitos de Sueño</string>
    <string name="sustancias">Sustancias Nocivas</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--TodoApp-->
    <string name="todo_title">Bienvenido </string>
    <string name="todo_categories">Categorías:</string>
    <string name="todo_tasks">Tareas:</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_university">Universidad</string>
    <string name="todo_dialog_category_programming">Programación</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>

</resources>