<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center_vertical"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_title_saludapp" />

    <Button
        android:id="@+id/btnImcApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_title_imcapp" />

    <Button
        android:id="@+id/btnTodoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_title_todoapp" />


</LinearLayout>